--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -29,7 +29,9 @@
     "typescript": "^5.0.0",
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
