Fix Dockerfile public directory copy issue
- Explicitly copy source files instead of using COPY . .
- Avoid nested empty directories causing Docker issues

--- a/apps/portal/Dockerfile
+++ b/apps/portal/Dockerfile
@@ -3,11 +3,10 @@ FROM node:18-alpine AS base
 
 # Install dependencies only when needed
 FROM base AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
-# Install ALL dependencies (including dev dependencies for build)
+# Install dependencies
 COPY package.json ./
 RUN npm install
 
@@ -15,11 +14,16 @@ RUN npm install
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY . .
 
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
+# Copy source files
+COPY app ./app
+COPY components ./components
+COPY lib ./lib
+COPY types ./types
+COPY public/favicon.ico public/optimal-logo.png ./public/
+COPY next.config.js tsconfig.json tailwind.config.ts postcss.config.js ./
+COPY package.json ./
+
 ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN npm run build
@@ -29,13 +33,12 @@ FROM base AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
-# Uncomment the following line in case you want to disable telemetry during runtime.
 ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Copy the standalone output
+# Copy the standalone output and static files
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/public ./public
@@ -48,7 +51,6 @@ USER nextjs
 EXPOSE 3000
 
 ENV PORT=3000
-# set hostname to localhost
 ENV HOSTNAME="0.0.0.0"
 
 # Start the application
