Fix public directory and .gitignore for Docker build
- Remove public from .gitignore (needed for Next.js assets)
- Simplify Dockerfile to not require public folder files
- Add public folder assets to git

--- a/.gitignore
+++ b/.gitignore
@@ -93,7 +93,8 @@ dist
 
 # Gatsby files
 .cache/
-public
+# Note: Don't ignore public/ as it's needed for Next.js portal assets
+# public
 
 # Storybook build outputs
 .out
